--- a/private/moviemasher.ini
+++ b/private/moviemasher.ini
@@ -28,11 +28,11 @@ MashIcon=1
 
 ; AWSAccessKeyID: Your Amazon Access Key ID
 ; REQUIRED if Client=SQS or File=S3
-AWSAccessKeyID= AKIAIYOOWGGDC3F5ABOQ
+AWSAccessKeyID= 
 
 ; Your Amazon Secret Access Key
 ; REQUIRED if Client=SQS or File=S3
-AWSSecretAccessKey= v2XXgmRo2hjZsX8xlaY1V0L38FDk847MCC4A/Vi7
+AWSSecretAccessKey= 
 
 ; KeypairPrivate: FULL file path to Private Key portion of keypair used to launch instance
 ; REQUIRED if AWS Access Key not provided - will be used instead of it for jobs if defined
